Moving to PdfPig, which allowed a lot easier layout. It's more limited for sure, but it was able to do the trick.

--- a/jryan-nametag.csproj
+++ b/jryan-nametag.csproj
@@ -10,7 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="itext7" Version="7.2.2" />
+    <!-- <PackageReference Include="itext7" Version="7.2.2" /> -->
+    <PackageReference Include="PdfPig" Version="0.1.6"/>
   </ItemGroup>
 
 </Project>
